--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<?php
+<!-- <?php
 
-$dosen = [
-    ["Shiranami Ramune (白波らむね)", "img/ramnueVTuber.jpg", "shiranami-ramune"],
-    ["Pusu ProSeka (ぷす)", "img/Pusu.png", "pusu-proseka"],
-    ["Nachoneko (甘城なつき)", "img/nacho.jpg", "nachoneko"],
-    ["Usada Pekora (兎田ぺこら)", "img/pekora.jpg", "usada-pekora"],
-    ["Hina Saeki (佐伯ヒナ)", "img/nana.png", "hina-saeki"],
-    ["Arya Bayu Anggara Putra", "img/eyes.jpg", "arya-bayu-anggara-putra"],
-    ["Tokoyami Towa (常闇トワ)", "img/towa.png", "tokoyami-towa"],
-    ["Minato Aqua (湊あくあ)", "img/aqua.jpg", "minato-aqua"],
-    ["Anya Melfissa (アーニャ)", "img/4mya.jpg", "anya-melfissa"]
-];
+        $dosen = [
+            ["Shiranami Ramune (白波らむね)", "img/ramnueVTuber.jpg", "shiranami-ramune"],
+            ["Pusu ProSeka (ぷす)", "img/Pusu.png", "pusu-proseka"],
+            ["Nachoneko (甘城なつき)", "img/nacho.jpg", "nachoneko"],
+            ["Usada Pekora (兎田ぺこら)", "img/pekora.jpg", "usada-pekora"],
+            ["Hina Saeki (佐伯ヒナ)", "img/nana.png", "hina-saeki"],
+            ["Arya Bayu Anggara Putra", "img/eyes.jpg", "arya-bayu-anggara-putra"],
+            ["Tokoyami Towa (常闇トワ)", "img/towa.png", "tokoyami-towa"],
+            ["Minato Aqua (湊あくあ)", "img/aqua.jpg", "minato-aqua"],
+            ["Anya Melfissa (アーニャ)", "img/4mya.jpg", "anya-melfissa"]
+        ];
 
-?>
+        ?> -->
 <!DOCTYPE html>
 <html lang="en">
 
