--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <li class="movie-item" style="max-width: 100%;height:400px;">
                     <div class="movie-item-button">
                         <figure class="movie-item-thumb" style="height:100%;">
-                            <a href="https://wapernabati.github.io/wafernabati/">
+                            <a href="https://wapernabati.github.io/wafernabati.html">
                                 <img class="news-item-thumb-main" style="background-image:url(img/eyes.jpg);" id="imgAvA">
                                 <div class="card-img-overlay">
                                     <p class="carousel-caption btn-pink" style="font-weight: bold;font-family:'Orbitron', sans-serif;font-size: 16px;padding:5px;text-align:center;box-shadow:inset 0 0 6px rgb(255 255 255 / 80%);bottom:0;">
